# keyRGB

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  install.sh  keyrgb  keyrgb-tray.py  keyrgb-tuxedo  pyproject.toml  requirements.txt  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  experimental-backend-confirmation.yml  hardware-support.yml
.github/agents/: Guided.agent.md
.github/workflows/: ci.yml  release.yml
buildpython/: __init__.py
buildpython/config/: architecture_rules.json  debt_baselines.json
buildpython/core/: cli.py  debt_index.py  model.py  profiles.py  runner.py  summary.py
buildpython/steps/: _architecture_validation_helpers.py  appimage_helpers.py  architecture_validation.py  loc_check_constants.py  quality_exceptions.py  reports.py  step_appimage.py  step_appimage_smoke.py  step_architecture_validation.py  step_black.py  step_code_hygiene.py  step_coverage.py  step_dead_code.py  step_defs.py  step_exception_transparency.py  step_format.py  step_import_scan.py  step_imports.py  step_loc_check.py  step_pip.py  step_quality.py  step_repo_validation.py  step_size.py  step_type_check.py
buildpython/utils/: import_probe.py  log_format.py  paths.py  subproc.py
debug-tests/: keyrgb-device-discovery.json  keyrgb-diagnostics.json  keyrgb-support-bundle.json
docs/: CONTRIBUTING.md  README.md
docs/0-governance/: README.md  lane-registry.md
docs/1-buildpython/: 01-Build-system.md  01.1-Build-steps.md  02-Build-logs.md  README.md
docs/1-repo/: 00-index.md  README.md
docs/1-src/: 00-index.md  01-backend-architecture.md  05-capabilities-and-ui.md  06-diagnostics-discovery-and-identity.md  08-reactive-brightness-invariants.md  09-physical-layout-and-slot-ids.md  10-support-tools-and-discovery.md  11-multi-device-routing-and-targets.md  12-composite-profile-coordination.md  13-tray-runtime-state-ownership.md  README.md
docs/2-usage/: README.md
docs/3-contributing/: 02-commit_procedure.md  README.md
docs/9-Legal/: CODE_OF_CONDUCT.md  README.md
docs/B-Research/: IMPLEMENTATION_PLAN.md  Keyrgb Hardware Expansion Research.md  README.md  TIER_1_2_IMPLEMENTATION_SUMMARY.md  TIER_3_ITE8297_ASSESSMENT.md  initial.md  ite8233-lightbar-research.md  research_prompt_gemini.md
docs/B-backend-audits/: 04-ite8291.md  06-ite8258-chassis.md  07-ite8297.md  10-ite8233.md  11-sysfs-mouse.md  12-asusctl.md  BACKEND_AUDIT_HANDOFF.md  README.md
docs/B-backend-guides/: README.md  backend-naming.md  hid-report-pacing-review.md
docs/D-bug-reports/: README.md  issue-5.md
docs/D-debugging/: 2026-06-08-kde-brightness-idle-dim.md  README.md  reactive-typing-flicker-postmortem-2026-04.md
docs/I-implementation-plans/: README.md  issue-7-composite-profile-hardening-and-validation-plan.md  ite8258-chassis-backend-plan.md  ite8258-chassis-secondary-device-refactor-implementation-plan.md  secondary-device-route-refactor-plan.md  secondary-lighting-profile-editor-and-simulation-plan.md
docs/Legal/: SECURITY.md
docs/O-optimisations/: 0.19.0-footprint.md  README.md  dim-undim-reactive-typing-review-improvement-plan.md  reactive-typing-improvement-plan.md
docs/P-power-management/: README.md
docs/R-feature-removals/: README.md
docs/U-gui/: README.md  physical-slot-id-roadmap.md
docs/Z-legacy/: 2026-04-21-improvement-roadmap.md  README.md
docs/architecture/: 00-commit.md  00-index.md  01-Build-system.md  01.1-Build-steps.md  01.2-Extending-buildpython.md  02-Build-logs.md  02-Build-steps.md  03-Build-logs.md  03-CI.md  04-CI.md  06-Rust.md  reactive-brightness-invariants.md  repo_layout.md
docs/audit/: 00-index.md  01-ite8291r3.md  02-ite8910.md  03-sysfs-leds.md  05-ite8258.md  06-ite8258-chassis.md  08-ite8291-zones.md  09-ite8295-zones.md  BACKEND_AUDIT_HANDOFF.md
docs/branches/: 0.19.0-reference-memory-and-typing.md  0.19.0-reference-other-useful-changes.md
docs/bug-reports/: issue-4.1.md  issue-4.md
docs/bugs/: reactive-typing-flicker-postmortem-2026-04.md
docs/developement/: Commands.txt  MAINTAINER_COMMITS.md  PR_PROCESS.md  README.md  V1_RELEASE_SPRINT.md  architecture-and-maintainability-improvement-plan.md  diagnostics-discovery-roadmap.md  improvement-roadmap.md  ite8910-protocol-notes.md  package-and-gui-boundary-refactor-anchor-plan.md  package-structure-assessment.md  power-mode-verification-refactor-plan.md
docs/development/: device-id-discovery.md
docs/devices/: initial.md
docs/genAI/: Lightbar Backend Research for keyRGB.md
docs/tech-debt/: README.md  backend-effects-runtime.md  exception-transparency-quality-gate.md  hotspots.md  legacy-boundaries.md  refactor-plan.md  tracking.md
docs/usage/: 01-build_runner.md  01.1fixes.md  03-release_procedure.md  04-hardware_tests.md  commands.md  usage.md
packaging/rpm/: COPR.md  README.md  ite8291r3-ctl-wootbook-support.patch  keyrgb.spec
packaging/udev/: 99-ite8291-wootbook.rules
scripts/: common.sh  copr-build-srpm.sh  install_dev.sh  install_user.sh  keyrgb-build.py  uninstall.sh
scripts/debug/: ite8258-chassis-zone-test.py
scripts/legacy/: install.legacy.sh  uninstall.legacy.sh
scripts/lib/: common_core.sh  optional_components.sh  privileged_helpers.sh  state.sh  user_integration.sh  user_prompts.sh
scripts/release/: bump_version.py  version.sh
src/: __init__.py  color_wheel.py  gui_keymap_calibrator.py  gui_perkey.py  gui_tuxedo.py  gui_uniform.py  profiles.py  tray_app.py
src/core/: __init__.py  acpi_monitoring.py  battery_saver_policy.py  brightness_layers.py  config.py  config_defaults.py  config_file_storage.py  config_paths.py  config_perkey_colors.py  defaults.py  defaults_y15_pro.json  diagnostics.py  diagnostics_collectors.py  diagnostics_io.py  diagnostics_paths.py  diagnostics_proc.py  diagnostics_usb.py  imports.py  layout.py  lid_monitoring.py  lighting_layers.py  logging_utils.py  login1_monitoring.py  power.py  power_source_policy.py  power_supply_sysfs.py  profile_json_storage.py  profile_paths.py  profiles.py  (+5 more)
tests/: _paths.py  conftest.py
(+1378 files in other folders)
